tests/ui/image/gather_err.stderr
error[E0277]: the trait bound `Image<f32, 0, 2, 0, 0, 1, 0, 4>: HasGather` is not satisfied
   --> $DIR/gather_err.rs:15:34
    |
15  |     let r1: glam::Vec4 = image1d.gather(*sampler, 0.0f32, 0);
    |                                  ^^^^^^ the trait `HasGather` is not implemented for `Image<f32, 0, 2, 0, 0, 1, 0, 4>`
    |
    = help: the following other types implement trait `HasGather`:
              Image<SampledType, 1, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>
              Image<SampledType, 3, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>
              Image<SampledType, 4, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, spirv_std::::image::{impl#1}::{constant#0}, SAMPLED, FORMAT, COMPONENTS>::gather`
   --> $SPIRV_STD_SRC/image.rs:197:15
    |
190 |     pub fn gather<F>(
    |            ------ required by a bound in this associated function
...
197 |         Self: HasGather,
    |               ^^^^^^^^^ required by this bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, spirv_std::::image::{impl#1}::{constant#0}, SAMPLED, FORMAT, COMPONENTS>::gather`

error[E0277]: the trait bound `Image<f32, 2, 2, 0, 0, 1, 0, 4>: HasGather` is not satisfied
   --> $DIR/gather_err.rs:16:34
    |
16  |     let r2: glam::Vec4 = image3d.gather(*sampler, v3, 0);
    |                                  ^^^^^^ the trait `HasGather` is not implemented for `Image<f32, 2, 2, 0, 0, 1, 0, 4>`
    |
    = help: the following other types implement trait `HasGather`:
              Image<SampledType, 1, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>
              Image<SampledType, 3, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>
              Image<SampledType, 4, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, spirv_std::::image::{impl#1}::{constant#0}, SAMPLED, FORMAT, COMPONENTS>::gather`
   --> $SPIRV_STD_SRC/image.rs:197:15
    |
190 |     pub fn gather<F>(
    |            ------ required by a bound in this associated function
...
197 |         Self: HasGather,
    |               ^^^^^^^^^ required by this bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, spirv_std::::image::{impl#1}::{constant#0}, SAMPLED, FORMAT, COMPONENTS>::gather`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
